--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -10,7 +10,7 @@
       "jsx": "react-jsx",
       "strict": true
   },
-  "include": ["**/*.tsx", "**/*.ts", "**/*.js", "**/*.jsx"]
-}
+  "include": ["**/*.tsx", "**/*.ts", "**/*.js", "**/*.jsx", "../client/src/components/Quiz.tsx"],
 
-  
+  "exclude": ["node_modules"]
+}
